<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="18dp"
    android:background="@color/header_footer">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/album_cover_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/havana"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/parentRoundedImageViewList"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/artist_text_view"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/song_name_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:singleLine="true"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintStart_toEndOf="@+id/album_cover_image_view"
        app:layout_constraintTop_toTopOf="@+id/album_cover_image_view"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/artist_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/artist_name"
        android:textSize="14sp"
        android:singleLine="true"
        android:textColor="@color/text_color"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintStart_toEndOf="@+id/album_cover_image_view"
        app:layout_constraintTop_toBottomOf="@+id/song_name_text_view" />

    <TextView
        android:id="@+id/duration_text_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/duration"
        android:textSize="14sp"
        android:textColor="@color/text_color"
        android:layout_marginEnd="22dp"
        app:layout_constraintTop_toBottomOf="@+id/song_name_text_view"
        app:layout_constraintEnd_toStartOf="@id/dots"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dots"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/more"
        android:textSize="14sp"
        android:layout_marginEnd="18dp"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_name_text_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>
