<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".fragment.PlayerFragment">

    <!-- Guideline to split the screen in half -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/square_corner_edge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:background="@drawable/top_corner_edge_rounded"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                app:tint="@color/text_color"
                android:contentDescription="@string/back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/songs"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/back" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="8dp"
            tools:listitem="@layout/songs_list_item_view"
            android:scrollbars="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/song_details_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/square_corner_edge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible">

        <!-- Parent ImageView -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/parent_img"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:shapeAppearanceOverlay="@style/parentRoundedImageView"
            android:scaleType="centerCrop"
            android:src="@drawable/havana"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_name"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginBottom="34dp"
            app:layout_constraintStart_toStartOf="@+id/parent_img"
            app:layout_constraintEnd_toEndOf="@+id/parent_img"
            app:layout_constraintBottom_toTopOf="@+id/childImageView"/>


        <!-- Child ImageView -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/childImageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            android:src="@drawable/havana"
            app:layout_constraintBottom_toBottomOf="@id/parent_img"
            app:layout_constraintEnd_toEndOf="@id/parent_img"
            app:layout_constraintStart_toStartOf="@+id/parent_img"
            app:layout_constraintTop_toTopOf="@id/parent_img" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/remain_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remain_duration"
            android:textSize="12sp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toBottomOf="@+id/childImageView"
            app:layout_constraintEnd_toEndOf="@id/seekBar"/>


        <!-- SeekBar -->
        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="50"
            android:progress="25"
            android:progressTint="@color/white"
            android:thumb="@drawable/seekbar_thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/remain_time" />

        <!-- Buttons -->
        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/rewindButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/rewind"
                android:contentDescription="@string/fast_rewind"
                android:padding="12dp" />

            <ImageButton
                android:id="@+id/playPauseButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/play"
                android:contentDescription="@string/play"
                android:padding="12dp" />

            <ImageButton
                android:id="@+id/fastForwardButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/forward"
                android:contentDescription="@string/fast_forward"
                android:padding="12dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>